# C-Challenges-HackerRank

./: CMakeLists.txt  README.md
doc/: helloWorld.md  playingWithCharacters.md
src/HelloWorld/: CMakeLists.txt  main.c
src/PlayWithCharacters/: CMakeLists.txt
src/PlayingWithCharacters/: CMakeLists.txt  main.c
